# kglog

./: .gitignore  README.md  ROADMAP.md  copilot-instructions.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run
.github/workflows/: backend-ci-jobs.yml  development-tests.yml  static-analysis.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2fb9d1a6191b_user_table.py  48f3ef98a43f_on_delete_action_id_measurements.py  cd300c87534a_on_delete_actions.py
backend/app/: main.py
backend/app/core/: database.py  security.py  settings.py  version.py
backend/app/models/: body_composition.py  body_measurements.py  user.py
backend/app/repositories/: body_composition.py  body_measurements.py  user.py
backend/app/routers/: body_composition.py  body_measurements.py  user.py
backend/app/schemas/: body_composition.py  body_measurements.py  user.py
backend/apps/users/: admin.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py
backend/config/settings/: base.py  dev.py  prod.py
backend/tests/: conftest.py
backend/tests/unit/: test_body_composition_model.py  test_body_composition_repository.py  test_body_composition_router.py  test_body_composition_schema.py  test_body_measurements_model.py  test_body_measurements_repository.py  test_body_measurements_router.py  test_body_measurements_schema.py  test_user_model.py  test_user_repository.py  test_user_router.py  test_user_schema.py
frontend/: Dockerfile
